# vectorized-fields

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
benchmarks/: C5-metal.md  README.md  bar-graph.python  c7a.8xlarge.md  line-graph.python  operation-bar-graph.python  sumcheck-bar-graph.python
src/: ark.rs  avx512test  avx512test.c  constants.rs  lib.rs  main.rs  modip256-urandom.c
src/assembly/: avx512montmul.S  innerproduct256.S  mod.rs  modadd256.S  modip256_mont.S  modmul256.S  modsub256.S  modsum256.S
src/benchmarks/: mod.rs
src/utils/: mod.rs
