[package]
name = "vectorized-fields"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.4.0"
ark-ff = "0.4.2"
ark-std = "0.4.0"
bincode = "1.3.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
serde = "1.0.204"

[build-dependencies]
cc = "1.1.5"

[profile.release]
opt-level = "z"
